--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.4.9",
+    "sweetalert2-react-content": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
